# customer-support-voice-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/: main.py  pyproject.toml
server/: main.py  pyproject.toml
server/core/: settings.py
shared/: pyproject.toml
shared/db/: engine.py
shared/src/shared/core/: settings.py
shared/src/shared/db/: engine.py  models.py  queries.py  seed.py
shared/src/shared/migrations/: env.py
shared/src/shared/migrations/versions/: 4a02a65c8ae6_initial_tables.py  70dda03bdc6f_add_order_number.py  e1a7ac93b7a1_use_timestamptz.py
web/: components.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/api/v1/token/: route.ts
web/components/: agent-ui.tsx
